# personality

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  ecosystem.config.cjs  start-server.sh
client/: README.md  angular.json  package-lock.json  package.json  prod-server.cjs
client/src/: index.html  styles.scss
client/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts
client/src/app/services/: personality-api.service.ts
server/: .env.example  README.md  pyproject.toml
server/src/personality_server/: __init__.py  app.py  graph.py  schemas.py
